--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Dokibása Nináde dikobade</title><!-- ẑĉŝāáàōóǒòēéèīíǐìūúǔùǖǘǚǜŋ-->
 	</head>
+	<body>
+		<h1 color="pink">Senáde Bī dibáke ku</h1>
+		<p>Ko tokonona bukeki lu</p>
+	</body>
 </html>
