--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Dokibása Nináde dikobade</title><!-- ẑĉŝāáàōóǒòēéèīíǐìūúǔùǖǘǚǜŋ-->
 	</head>
 	<body>
-		<h1 color="pink">Senáde Bī dibáke ku</h1>
+		<h1 style="color:pink;">Senáde Bī dibáke ku</h1>
 		<p>Ko tokonona bukeki lu</p>
 	</body>
 </html>
