--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dokibása Nináde dikobade</title><!-- ẑĉŝāáàōóǒòēéèīíǐìūúǔùǖǘǚǜŋ-->
+		<title>Dokibása Nináde dikobade</title><!-- ẑĉŝāáǎàōóǒòēéěèīíǐìūúǔùǖǘǚǜŋ-->
 	</head>
 	<body>
 		<h1 style="color:pink;">Senáde Bī dibáke ku</h1>
