--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1 style="color:pink;">Senáde Bī dibáke ku</h1>
-		<p>Ko tokonona bukeki lu</p>
+		<a href="黄氏编码 Lopidásu lì hanodāle hedǎ.md">Ko tokonona bukeki lu</a>
 	</body>
 </html>
