--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 		<title>Dokibása Nináde dikobade</title><!-- ẑĉŝāáǎàōóǒòēéěèīíǐìūúǔùǖǘǚǜŋ-->
 	</head>
 	<body>
-		<h1 style="color:pink;">Senáde Bī dibáke ku</h1>
-		<h2 style="color:green;">ZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SBZTY SB</h2>
-		<h3 style="color:green;">YHJSBYHJSBYHJSBYHJSBYHJSBYHJSBYHJSBYHJSB</h3>
+		<h1 style="color:green;">pudāsu ninósu sǐ sesì hǐ！</h1>
+		<s>张庭语去死！</s>
 		<a href="黄氏编码 Lopidásu lì hanodāle hedǎ.md">Ko tokonona bukeki lu</a>
 	</body>
 </html>
