--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dokibása Nináde dikobade</title><!-- ẑĉŝāáǎàōóǒòēéěèīíǐìūúǔùǖǘǚǜŋ-->
+		<title>Dokibása Nináde dikobade</title>
 	</head>
 	<body>
-		<h1 style="color:green;">pudāsu ninósu sǐ sesì hǐ！</h1>
-		<s>张庭语去死！</s>
-		<a href="黄氏编码 Lopidásu lì hanodāle hedǎ.md">Ko tokonona bukeki lu</a>
+		<img src="a.png">
 	</body>
 </html>
