--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- 图片容器 -->
     <div class="image-container" id="container">
         <div class="image-overlay"></div>
-        <img id="display-image" src="Dy.JPG" alt="分享的图片" loading="lazy">
+        <img id="display-image" src="Dy.png" alt="分享的图片" loading="lazy">
     </div>
 
     <!-- 提示文字 -->
@@ -273,4 +273,5 @@
         document.addEventListener('click', initAudioOnInteraction);
     </script>
 </body>
+
 </html>
