--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             font-size: 20px;
             text-align: center;
             opacity: 0.7;
-            font-family: "Segoe Script", "Microsoft YaHei", "SimHei", cursive;
+            font-family: "Gabriola", "Microsoft YaHei", "SimHei", cursive;
             font-weight: 500;
             letter-spacing: 0.5px;
         }
@@ -131,9 +131,9 @@
         let audioInitiated = false;
         audio.volume = 0;
         const lowVolume = 0.2;
-        const normalVolume = 0.8;
+        const normalVolume = 0.52;
         const volumeStep = 0.01;
-        const volumeInterval = 50;
+        const volumeInterval = 520;
 
         // ---------------------- 随机抖动核心逻辑 ----------------------
         // 随机抖动配置
