--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- 音频控件 -->
-    <link rel="preload" href="Sacred Play Secret Place.mp3" as="audio" 
+    <link rel="preload" href="Sacred Play Secret Place.mp3" as="audio" >
 
     <!-- 图片容器 -->
     <div class="image-container" id="container">
@@ -245,4 +245,5 @@
         document.addEventListener('click', initAudioOnInteraction);
     </script>
 </body>
+
 </html>
