--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 </head>
 <body>
     <!-- 音频控件 -->
-    <link rel="preload" href="Sacred Play Secret Place.mp3" as="audio" >
+    <audio id="background-music" loop preload="auto">
+        <source src="Sacred Play Secret Place.mp3" type="audio/mpeg">
+    </audio>
 
     <!-- 图片容器 -->
     <div class="image-container" id="container">
@@ -97,7 +99,6 @@
         <img id="display-image" src="Dy.webp" alt="分享的图片" loading="lazy">
     </div>
 
-    <!-- 提示文字 -->
     <div class="hint">DYSPROSITOS<br />
         Again thou tread the path by th' rippling pool, <br />
         Where willow fronds kiss waves with softest cool. <br />
@@ -113,7 +114,7 @@
         // 获取元素
         const container = document.getElementById('container');
         const image = document.getElementById('display-image');
-        const audio = new Audio('audio.mp3');
+        const audio = document.getElementById('background-music');
         audio.play();
         
         // 缩放相关变量
@@ -247,3 +248,4 @@
 </body>
 
 </html>
+
