--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
             background-color: #b7b7b7;
             display: flex;
             justify-content: center;
-            align-items: center;
+            /* 关键修改：把center改成flex-start，让内容靠上，同时加padding-top控制间距 */
+            align-items: flex-start;
             padding: 20px;
+            padding-top: 40px; /* 可根据需要调整顶部间距 */
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            touch-action: manipulation; /* 优化移动端触摸体验 */
+            touch-action: manipulation;
+            position: relative;
         }
 
         /* 图片容器 - 随机抖动配置 */
@@ -278,5 +281,6 @@
 </body>
 
 </html>
+
 
 
