--- a/index.html
+++ b/index.html
@@ -336,12 +336,9 @@
     <header>
       <h1>
         <i class="fas fa-dna"></i> 
-        Base64 ↔ AUCG
+        文本转换
         <i class="fas fa-exchange-alt" style="font-size: 1.8rem;"></i>
       </h1>
-      <div class="subtitle">
-        文本 ↔ 三碱基密码子
-      </div>
     </header>
 
     <!-- 自适应双卡片：手机竖屏必定纵向堆叠，大屏并排但舒适 -->
@@ -614,4 +611,5 @@
   </script>
 </body>
 </html>
+
 
